Fix text overflow1

--- a/css/index.css
+++ b/css/index.css
@@ -71,7 +71,7 @@ h1 {
 
   .texts {
 	position: relative;
-	transform: translate(0%, -70px);
+	transform: translate(0%, -80px);
 	padding-bottom: 0%;
   }
 
